{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 166,
  "lineage": "325c5ac0-1bca-0fce-6e2f-bf411c5d6be6",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-03-02T08:18:17.864-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/heroic-grove-379322/global/firewalls/l7-ilb-fw-allow-iap-hc",
            "log_config": [],
            "name": "l7-ilb-fw-allow-iap-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/global/networks/l7-ilb-network",
            "priority": 1000,
            "project": "heroic-grove-379322",
            "self_link": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/global/firewalls/l7-ilb-fw-allow-iap-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16",
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "fw_ilb_to_backends",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-03-02T08:19:34.268-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/heroic-grove-379322/global/firewalls/l7-ilb-fw-allow-ilb-to-backends",
            "log_config": [],
            "name": "l7-ilb-fw-allow-ilb-to-backends",
            "network": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/global/networks/l7-ilb-network",
            "priority": 1000,
            "project": "heroic-grove-379322",
            "self_link": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/global/firewalls/l7-ilb-fw-allow-ilb-to-backends",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.ilb_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_forwarding_rule",
      "name": "google_compute_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "all_ports": false,
            "allow_global_access": false,
            "creation_timestamp": "2023-03-02T08:24:13.534-08:00",
            "id": "projects/heroic-grove-379322/regions/us-central1/forwardingRules/l7-ilb-forwarding-rule",
            "ip_address": "10.0.1.5",
            "ip_protocol": "TCP",
            "is_mirroring_collector": false,
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "l7-ilb-forwarding-rule",
            "network": "projects/heroic-grove-379322/global/networks/l7-ilb-network",
            "network_tier": "PREMIUM",
            "port_range": "80",
            "project": "heroic-grove-379322",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/beta/projects/heroic-grove-379322/regions/us-central1/forwardingRules/l7-ilb-forwarding-rule",
            "subnetwork": "projects/heroic-grove-379322/regions/us-central1/subnetworks/l7-ilb-subnet",
            "target": "projects/heroic-grove-379322/regions/us-central1/targetHttpProxies/l7-ilb-target-http-proxy"
          },
          "dependencies": [
            "google_compute_network.ilb_network",
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.mig",
            "google_compute_region_target_http_proxy.default",
            "google_compute_region_url_map.default",
            "google_compute_subnetwork.ilb_subnet",
            "google_compute_subnetwork.proxy_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/beta/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-2204-jammy-v20230228",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/zones/us-central1-a/disks/l7-ilb-test-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/heroic-grove-379322/zones/us-central1-a/instances/l7-ilb-test-vm",
            "instance_id": "6705757838518350457",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "Af7U9xsPGVU=",
            "name": "l7-ilb-test-vm",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/global/networks/l7-ilb-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/regions/us-central1/subnetworks/l7-ilb-subnet",
                "subnetwork_project": "heroic-grove-379322"
              }
            ],
            "project": "heroic-grove-379322",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/zones/us-central1-a/instances/l7-ilb-test-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.ilb_network",
            "google_compute_subnetwork.ilb_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "ilb_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/heroic-grove-379322/global/networks/l7-ilb-network",
            "mtu": 0,
            "name": "l7-ilb-network",
            "project": "heroic-grove-379322",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/global/networks/l7-ilb-network"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "failover": false,
                "group": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/regions/us-central1/instanceGroups/l7-ilb-mig1",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 0,
            "creation_timestamp": "2023-03-02T08:23:19.132-08:00",
            "enable_cdn": false,
            "fingerprint": "jc9Yc5zzmNI=",
            "health_checks": [
              "projects/heroic-grove-379322/regions/us-central1/healthChecks/l7-ilb-hc"
            ],
            "id": "projects/heroic-grove-379322/regions/us-central1/backendServices/l7-ilb-backend-subnet",
            "load_balancing_scheme": "INTERNAL_MANAGED",
            "name": "l7-ilb-backend-subnet",
            "port_name": "http",
            "project": "heroic-grove-379322",
            "protocol": "HTTP",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/regions/us-central1/backendServices/l7-ilb-backend-subnet",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_region_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-02T08:23:50.705-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/regions/us-central1/backendServices/l7-ilb-backend-subnet",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "g74gQk7q2GQ=",
            "host_rule": [],
            "id": "projects/heroic-grove-379322/regions/us-central1/urlMaps/l7-ilb-regional-url-map",
            "map_id": 2421131913234051961,
            "name": "l7-ilb-regional-url-map",
            "path_matcher": [],
            "project": "heroic-grove-379322",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/regions/us-central1/urlMaps/l7-ilb-regional-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_region_backend_service.default",
            "google_compute_region_health_check.default",
            "google_compute_region_instance_group_manager.mig"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "ilb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-02T08:18:18.312-08:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/heroic-grove-379322/regions/us-central1/subnetworks/l7-ilb-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "l7-ilb-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/global/networks/l7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "heroic-grove-379322",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/regions/us-central1/subnetworks/l7-ilb-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.ilb_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "proxy_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-03-02T08:18:18.232-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/heroic-grove-379322/regions/us-central1/subnetworks/l7-ilb-proxy-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "l7-ilb-proxy-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/global/networks/l7-ilb-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "heroic-grove-379322",
            "purpose": "INTERNAL_HTTPS_LOAD_BALANCER",
            "region": "us-central1",
            "role": "ACTIVE",
            "self_link": "https://www.googleapis.com/compute/v1/projects/heroic-grove-379322/regions/us-central1/subnetworks/l7-ilb-proxy-subnet"
          },
          "dependencies": [
            "google_compute_network.ilb_network"
          ]
        }
      ]
    }
  ]
}